CF-62: Analyze project alignment fixed

--- a/server/sonar-web/src/main/js/app/styles/pages/CreateProject.css
+++ b/server/sonar-web/src/main/js/app/styles/pages/CreateProject.css
@@ -16,3 +16,7 @@
   display: flex;
   align-items: center;
 }
+
+.navlink-text {
+  color: rgb(93, 108, 208);
+}
